--- a/levitate.cabal
+++ b/levitate.cabal
@@ -16,7 +16,11 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+                     , ConvertJson
   build-depends:       base >= 4.7 && < 5
+                     , bytestring
+                     , text
+                     , aeson
   default-language:    Haskell2010
 
 executable levitate-exe
